# investment-bot-neu

./: .env.example  .gitattributes  .gitignore  README.md  README_HF.md  app.py  app_gradio.py  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  sync-to-hf.yml
.streamlit/: config.toml
agent/: __init__.py  graph.py  state.py  tools.py
data/: demo_recommendation.json  options.json  price_history.json  universe.json  universe_snapshot.json
data_sources/: __init__.py  market.py  price_history.py  risk.py  snapshot.py  universe.py
eval/: __init__.py  extraction.py  judge.py  run.py
eval/datasets/: profile_extraction.jsonl
llm/: model.py  prompts.py
logic/: allocation.py  backtest.py  contributions.py  profile.py  scoring.py
mcp_server/: __init__.py  server.py
rag/: __init__.py  _compat.py  build_docs.py  ingest.py  retriever.py
tests/: test_agent.py  test_allocation.py  test_backtest.py  test_contributions.py  test_deploy.py  test_eval.py  test_formatting.py  test_mcp.py  test_rag.py  test_risk.py  test_scoring.py  test_ui.py
ui/: chat.py  demo.py  formatting.py  recommendation.py  theme.py
