[project]
name = "robo-advisor"
version = "0.2.0"
description = "Agentic RAG robo-advisor: chat-based investment recommendations grounded in live market data and fund factsheets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Luis" }]

dependencies = [
    "streamlit>=1.50",
    "langchain>=1.0",
    "langgraph>=1.0",
    "langchain-google-genai>=4.0",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "numpy>=2.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
# Extra LLM providers (multi-provider abstraction in llm/model.py)
providers = [
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langchain-ibm>=0.3",
]
# Retrieval-augmented generation layer
rag = [
    "langchain-community>=0.3",
    "langchain-chroma>=0.2",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pypdf>=5.0",
]
# Model Context Protocol server
mcp = [
    "mcp>=1.2",
]
# Optional portfolio optimization
optimize = [
    "PyPortfolioOpt>=1.5",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Packages are added phase by phase as their modules land
# (data_sources, rag, agent, mcp_server follow in later phases).
packages = ["llm", "logic", "ui", "data_sources"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
